--- a/config/machines/levante/regrid.yaml
+++ b/config/machines/levante/regrid.yaml
@@ -4,173 +4,11 @@ paths:
   weights: /work/bb1153/b382075/aqua/weights
   areas: /work/bb1153/b382075/aqua/areas
 
-#templates
-weights:
-  template_default: weights_{model}_{exp}_{source}_{method}_{targetgrid}_l{level}.nc
-  template_grid: weights_{sourcegrid}_{method}_{targetgrid}_l{level}.nc
-areas:
-  template_default: cell_area_{model}_{exp}_{source}.nc
-  template_grid: cell_area_{grid}.nc
-cdo-paths: # to be checked
-  download: $weights
-  icon: /pool/data/ICON
-
-#available grids
-grids:
-  lon-lat:
-    space_coord: ["lon", "lat"]
- #healpix: {gridpath}/healpix/icon_hpx{zoom}_atm_2d.nc 
- 
- #IFS
-  tco3999: 
-    path: $grids/IFS/tco3999_grid.nc
-    space_coord: ["value"]
-  tco2559:
-    path: 
-      2d: $grids/IFS/tco2559_grid.nc
-      2dm: $grids/IFS/tco2559_grid_masked.nc
-    masked_vars: ["ci", "sst"]
-    vert_coord: ["2d", "2dm"]
-    space_coord: ["value"]
-  tco1279:
-    path: 
-      2d: $grids/IFS/tco1279_grid.nc
-      2dm: $grids/IFS/tco1279_grid_masked.nc
-    masked_vars: ["ci", "sst"]
-    vert_coord: ["2d", "2dm"]
-    space_coord: ["value"]
-  ifs-interpolated: 
-    path: $grids/IFS/ifs_interpolated5400x2700.nc
-    space_coord: ["lon", "lat"]
-  tco79:
-    path: $grids/IFS/tco79_grid.nc
-    space_coord: ["cell"]
-  tco399:
-    path: $grids/IFS/tco399_grid.nc
-    space_coord: ["cell"]
-  multio-r025:
-    space_coord: ["value"]
-    extra: -setgrid,$grids/IFS/grid_lonlat_025.txt
-    cellareas: $grids/IFS/cellarea_unstructured_025.nc
-    cellarea_var: cell_area
-
-  #ICON
-  R02B08:
-    path: $grids/ICON/icon_grid_0033_R02B08_G.nc
-    space_coord: ["cell"]
-    extra: -selname,cell_index
-  R02B09:
-    path: $grids/ICON/icon_grid_0015_R02B09_G.nc
-    space_coord: ["cell"]
-    extra: -selname,cell_index
-  # R02B09_oce:  #not working!!! wrong vert coordinates?
-  #   path: $grids/ICON/icon_grid_0015_R02B09_G.nc
-  #   space_coord: ["cell"]
-  #   extra: -selname,cell_index
-  #   vert_coord: ["depth_half", "depth_full"]
-  icon-R02B09-intaketest: 
-      path: $grids/ICON/icon_grid_0015_R02B09_G.nc
-      extra: -selname,cell_index
-      space_coord: ["ncells"]
-  icon-healpix:
-    path:
-      2d: $grids/HealPix/icon_hpx{zoom}_atm_2d.nc   # this is the default 2d grid
-      2dm: $grids/HealPix/icon_hpx{zoom}_oce_2d.nc  # this is an additional and optional 2d grid used if data are masked
-      depth_full: $grids/HealPix/icon_hpx{zoom}_oce_depth_full.nc
-      depth_half: $grids/HealPix/icon_hpx{zoom}_oce_depth_half.nc
-    masked:   # This is the attribute used to distinguish variables which should go into the masked category
-      component: ocean
-    space_coord: ["cell"]
-    vert_coord: ["depth_half", "depth_full"]
-
-  #FESOM
-  fesom-interpolated-2d:
-    path: $grids/FESOM/fesom_tco2559_interpolated_2d.nc
-    space_coord: ["lon", "lat"]
-  fesom-interpolated-3d:
-    path: $grids/FESOM/fesom_tco2559_interpolated_3d.nc
-    space_coord: ["lon", "lat"]
-    vert_coord: depth
-  ng5-nodes-2d:
-    space_coord: ["nod2"]
-    extra:
-    - -setgrid,$grids/FESOM/NG5_griddes_nodes_IFS.nc
-  ng5-nodes-3d:
-    path:
-      nz: $grids/FESOM/NG5_nodes_fesom_mask_nz.nc
-      nz1: $grids/FESOM/NG5_nodes_fesom_mask_nz1.nc
-    space_coord: ["nod2"]
-    vert_coord: ["nz", "nz1"]
-    extra: 
-    - -setgrid,$grids/FESOM/NG5_griddes_nodes_IFS.nc 
-  ng5-elems-2d:
-    space_coord: ['elem']
-    extra: 
-    - -setgrid,$grids/FESOM/NG5_griddes_elems_IFS.nc 
-  ng5-elems-3d:
-    path:
-      nz1: $grids/FESOM/NG5_elem_fesom_mask_nz1.nc
-    space_coord: ["elem"]
-    vert_coord: ["nz1"]
-    extra: 
-    - -setgrid,$grids/FESOM/NG5_griddes_elems_IFS.nc 
-
-  # OBSERVATIONS
-  aviso:
-    space_coord: ["longitude", "latitude"]
-
-  woa:
-    path:
-      depth: $grids/WOA18/grid-woa18.nc
-    vert_coord: depth
-    space_coord: ["lon", "lat"]
-
-  en4:
-    path:
-      lev: $grids/EN4/en4-grid.nc
-    space_coord: ["lon", "lat"]
-    vert_coord: ["lev"]
-
-  era5-r025:
-    path: 
-      2d: $grids/ERA5/r025_grid.nc
-      2dm: $grids/ERA5/r025_grid_masked.nc
-    masked_vars:
-      - sst
-      - SSTK
-    space_coord: ["lon", "lat"]
-    vert_coord: ["2d", "2dm"]
-
-  era5-n320:
-    path: $grids/ERA5/n320_unstructured.nc
-    space_coord: ["values"]
-
-  osi-saf-nh:
-    space_coord:
-      - xc
-      - yc
-    cellareas: $grids/OSI-SAF/grid_nh.nc
-    cellarea_var: areacello
-    mask: $grids/OSI-SAF/grid_nh.nc
-    mask_var: sftof
-  osi-saf-sh:
-    space_coord:
-      - xc
-      - yc
-    cellareas: $grids/OSI-SAF/grid_sh.nc
-    cellarea_var: areacello
-    mask: $grids/OSI-SAF/grid_sh.nc
-    mask_var: sftof
-  
-
-  r005: r7200x3600
-  r010: r3600x1800
-  r020: r1800x900
-  r025: r1440x720
-  r050: r720x360
-  r100: r360x180
-  r200: r180x90
-  r250: r144x72
+# available grids, not worth to become machine independent, add here
+# grids:
+#   custom-grid:
+#     default: lon-lat
+#     space_coord: [lon, lat]
 
 # couple grids to experiment and sources
 sources:
