--- a/config/machines/lumi/regrid.yaml
+++ b/config/machines/lumi/regrid.yaml
@@ -4,124 +4,19 @@ paths:
   weights: /pfs/lustrep3/projappl/project_465000454/data/AQUA/weights
   areas: /pfs/lustrep3/projappl/project_465000454/data/AQUA/areas
 
-# templates
-weights:
-  template_default: weights_{model}_{exp}_{source}_{method}_{targetgrid}_l{level}.nc
-  template_grid: weights_{sourcegrid}_{method}_{targetgrid}_l{level}.nc
-areas:
-  template_default: cell_area_{model}_{exp}_{source}.nc
-  template_grid: cell_area_{grid}.nc
-cdo-paths: # to be checked
-  download: $grids
-  icon: /pool/data/ICON
-
-# available grids
-# extra is an extra special cdo command to be applied before generating the weights
-grids:
-  # default
-  lon-lat:
-    space_coord: ["lon", "lat"]
-  # target regrid
-  r005: r7200x3600
-  r010: r3600x1800
-  r020: r1800x900
-  r025: r1440x720
-  r050: r720x360
-  r100: r360x180
-  r200: r180x90
-  r250: r144x72
-
-  # IFS
-  tco399:
-    path: 
-      2d: $grids/IFS/tco399_grid.nc
-      2dm: $grids/IFS/tco399_grid_masked.nc
-    masked_vars: ["ci", "sst"]
-    s#pace_coord: ["ncells"]
-    vert_coord: ["2d", "2dm"]  # If the case is more complex than simply "2d" we need to specify this
-  tco1279:
-    path: 
-      2d: $grids/IFS/tco1279_grid.nc
-      2dm: $grids/IFS/tco1279_grid_masked.nc
-    masked_vars: ["ci", "sst"]
-    vert_coord: ["2d", "2dm"]
-    #space_coord: ["ncells"]
-  tco79:
-    path: $grids/IFS/tco79_grid.nc
-    #space_coord: ["value"]
-  # NEMO
-  eORCA1-2d:
-    path: $grids/NEMO/ORCA1_mesh_sfc_grid_T.nc
-    #space_coord: ["cell"]
-    # path: /pfs/lustrep3/scratch/project_465000454/pool/data/IFS/inputs_de_48r1/nemo/V40/eORCA1_Z75/common/mesh_mask.nc
-    # extra:
-    #   - selname,tmask          
-    # space_coord: ["nav_lon", "nav_lat"]
-  eORCA1-3d:
-    path: $grids/NEMO/eORCA1_mesh_3d_grid_T.nc
-    #space_coord: ["ncells"]
-    vert_coord: ["height"]
-    extra:
-      - -selname,dummy    
-  # FESOM
-  ng5-2d:
-    path: $grids/FESOM/AQUA_NG5_griddes_nodes_IFS.nc
-    space_coord:
-      - nod2
-  ng5-3d:
-    path:
-      nz: $grids/FESOM/NG5_nodes_fesom_mask_nz.nc
-      nz1: $grids/FESOM/NG5_nodes_fesom_mask_nz1.nc
-    #space_coord: ["nod2"]
-    vert_coord: ["nz", "nz1"]
-    extra: 
-      - -setgrid,$grids/FESOM/NG5_griddes_nodes_IFS.nc 
-  # OBSERVATIONS
-  era5-r025:
-    path: 
-      2d: $grids/lonlat/r025_grid.nc
-      2dm: $grids/lonlat/r025_grid_masked.nc
-    masked_vars:
-      - sst
-      - SSTK
-    #space_coord: ["lon", "lat"]
-    vert_coord: ["2d", "2dm"]  # If the case is more complex than simply "2d" we need to specify this
-
-  osi-saf-nh:
-    space_coord: ['xc', 'yc']
-    cellareas: $grids/OSI-SAF/grid_nh.nc
-    cellarea_var: areacello
-    mask: $grids/OSI-SAF/grid_nh.nc
-    mask_var: sftof
-  osi-saf-sh:
-    space_coord: ['xc', 'yc']
-    cellareas: $grids/OSI-SAF/grid_sh.nc
-    cellarea_var: areacello
-    mask: $grids/OSI-SAF/grid_sh.nc
-    mask_var: sftof
-
-  en4:
-    path:
-      lev: $grids/EN4/en4-grid.nc
-    space_coord: ["lon", "lat"]
-    vert_coord: ["lev"]
-
-  aviso:
-    space_coord: ["longitude", "latitude"]
-
-  woa:
-    path:
-      depth: $grids/WOA18/grid-woa18.nc
-    vert_coord: depth
-    space_coord: ["lon", "lat"]
+# available grids, not worth to become machine independent, add here
+# grids:
+#   custom-grid:
+#     default: lon-lat
+#     space_coord: [lon, lat]
 
 sources:
 # extra is an extra special cdo command to be applied before generating the weights
   FESOM:
     historical-1990-fesom:
-      monthly-original-2d: ng5-2d
-      daily-original-2d: ng5-2d
-      monthly-original-3d: ng5-3d
+      monthly-original-2d: ng5-nodes-2d
+      daily-original-2d: ng5-nodes-2d
+      monthly-original-3d: ng5-nodes-3d
 
   IFS:
     tco399-orca025:
