--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,15 +35,15 @@ dependencies = [
     "docker",
     "gribscan",
     "ecCodes",
+    "pandas",
     "intake",
-    "intake-esm>=2023.4.20",
+    "intake-esm",
     "intake-xarray",
     "jinja2",
     "matplotlib",
     "metpy",
     "numpy",
-    "pandas",
-    "pydantic<2.0.0",
+    "pydantic",
     "pyYAML",
     "ruamel.yaml",
     "smmregrid",
