--- a/environment-common.yml
+++ b/environment-common.yml
@@ -3,7 +3,7 @@
 # or if you really want to use conda
 # conda env create -f environment-common.yml
 
-name: aqua_common_test
+name: aqua_common
 channels:
   - conda-forge
 # please note that some of these dependencies are made explicit on purpose, but are not directly required by conda/mamba
