add opa entry to regrid.yaml

--- a/config/machines/lumi/regrid.yaml
+++ b/config/machines/lumi/regrid.yaml
@@ -89,6 +89,8 @@ source_grids:
         space_coord: ["lon", "lat"]
       lra-r100-monthly:
         space_coord: ["lon", "lat"]
+      opa:
+        space_coord: ["lon", "lat"]
     historical-1990-fesom:
       default:
         space_coord: ["ncells"]
@@ -114,6 +116,8 @@ source_grids:
       monthly-1deg-3d:
         space_coord: ["lon", "lat"]
       lra-r100-monthly:
+        space_coord: ["lon", "lat"]
+      opa:
         space_coord: ["lon", "lat"]
 
   ERA5:
