allow grid in cat metadata

--- a/config/machines/levante/catalog/IFS/tco1279-orca025-cycle3.yaml
+++ b/config/machines/levante/catalog/IFS/tco1279-orca025-cycle3.yaml
@@ -9,48 +9,64 @@ sources:
       consolidated: false
       urlpath: 
         reference::/work/bm1235/b381679/IFS_cycle3/9km_nemo/gribscan_1h6h_native/json.dir/atm2d.json
+    metadata:
+      grid: tco1279
   3D_1h_native:
     driver: zarr
     args:
       consolidated: false
       urlpath: 
         reference::/work/bm1235/b381679/IFS_cycle3/9km_nemo/gribscan_1h6h_native/json.dir/atm3d.json
+    metadata:
+      grid: tco1279
   2D_monthly_native:
     driver: zarr
     args:
       consolidated: false
       urlpath: 
         reference::/work/bm1235/b381679/IFS_cycle3/9km_nemo/gribscan_monthly_native/json.dir/atm2d.json
+    metadata:
+      grid: tco1279
   3D_monthly_native:
     driver: zarr
     args:
       consolidated: false
       urlpath: 
         reference::/work/bm1235/b381679/IFS_cycle3/9km_nemo/gribscan_monthly_native/json.dir/atm3d.json
+    metadata:
+      grid: tco1279
   2D_1h_0.25deg:
     driver: zarr
     args:
       consolidated: false
       urlpath: 
         reference::/work/bm1235/b381679/IFS_cycle3/9km_nemo/gribscan_1h6h_0.25deg/json.dir/atm2d.json
+    metadata:
+      grid: multio-r025
   3D_1h_0.25deg:
     driver: zarr
     args:
       consolidated: false
       urlpath: 
         reference::/work/bm1235/b381679/IFS_cycle3/9km_nemo/gribscan_1h6h_0.25deg/json.dir/atm3d.json
+    metadata:
+      grid: multio-r025
   2D_monthly_0.25deg:
     driver: zarr
     args:
       consolidated: false
       urlpath: 
         reference::/work/bm1235/b381679/IFS_cycle3/9km_nemo/gribscan_monthly_0.25deg/json.dir/atm2d.json
+    metadata:
+      grid: multio-r025
   3D_monthly_0.25deg:
     driver: zarr
     args:
       consolidated: false
       urlpath: 
         reference::/work/bm1235/b381679/IFS_cycle3/9km_nemo/gribscan_monthly_0.25deg/json.dir/atm3d.json
+    metadata:
+      grid: multio-r025
   # 2D_1h_1deg:
   #   driver: zarr
   #   args:
@@ -90,3 +106,5 @@ sources:
       chunks: {}
       xarray_kwargs:
         decode_times: true
+    metadata:
+      grid: multio-r025
