removed double container creation

--- a/.github/workflows/create-container-from-tag.yaml
+++ b/.github/workflows/create-container-from-tag.yaml
@@ -3,9 +3,9 @@ name: "Container build and publish"
 on:
   release:
     types: [published]
-  push:
-    tags:
-      - v*
+  # push: # We remove this to create the container only when we create a release from browser (issue #490)
+  #   tags:
+  #     - v*
 
 env:
   IMAGE_NAME: aqua
