--- a/diagnostics/ecmean/cli/config_ecmean_cli.yaml
+++ b/diagnostics/ecmean/cli/config_ecmean_cli.yaml
@@ -2,8 +2,8 @@ dataset:
   model_atm: IFS
   model_oce: False
   exp: control-1950-devcon
-  year1: 1950
-  year2: 1959
+  atm_vars: ['2t', 'tprate', 'msl', 'iews', 'inss', 'u', 'v', 't', 'q']
+  oce_vars: ['sst', 'ci', 'sos']
 
 compute:
   numproc: 1
@@ -12,4 +12,5 @@ setup:
   loglevel: 'INFO'
   interface_file: '../config/interface_AQUA.yml'
   config_file: '../config/ecmean_config.yml'
+  outputdir: '../output'
   
