--- a/diagnostics/ocean3d/cli/config.yaml
+++ b/diagnostics/ocean3d/cli/config.yaml
@@ -1,4 +1,4 @@
 model: 'FESOM' 
-exp: 'historical-1990-fesom'
-source: "control-monthly-original-3d"
+exp: 'tco2559-ng5-cycle3'
+source: "lra-r100-monthly"
 outputdir: './output'
