changed standard for oceanic setup

--- a/diagnostics/teleconnections/cli/single_analysis/cli_config_oce.yaml
+++ b/diagnostics/teleconnections/cli/single_analysis/cli_config_oce.yaml
@@ -3,7 +3,7 @@ teleconnections:
   ENSO: true
 
 # This is overwritten if the script with the flags --model, --exp, --source
-model: 'IFS'
+model: 'FESOM'
 exp: 'tco2559-ng5-cycle3'
 source: 'lra-r100-monthly'
 
