--- a/diagnostics/tropical_rainfall/cli/config/trop_rainfall_config.yml
+++ b/diagnostics/tropical_rainfall/cli/config/trop_rainfall_config.yml
@@ -1,17 +1,32 @@
-class_attributes:
-  trop_lat:    15
-  num_of_bins: 20
-  first_edge:   0
-  width_of_bin: 2.5e-05
-
-model_variable: 'tprate'
-new_unit:       'm/day'
-
-path:
-  path_to_netcdf: "/work/bb1153/b382267/tropical_rainfall_cicle3/NetCDF/histograms/"
-  path_to_pdf: "/work/bb1153/b382267/tropical_rainfall_cicle3/NetCDF/PDF/"
-
 data:
   model:  "ICON"
   exp:    "ngc3028" 
   source: "lra-r100-monthly"
+
+class_attributes:
+  trop_lat:    15
+  num_of_bins: 1000
+  first_edge:   0
+  width_of_bin: 1
+
+model_variable: 'tprate'
+new_unit:       'mm/hr'
+loglevel:       'WARNING'
+
+plot:
+  color: 'tab:green'
+  figsize: 1
+  legend: 'ICON_ngc3028_lra'
+  xmax: 100
+  plot_title: 'Monthly, 1 degree res (100km)'
+  loc: 'upper right'
+  pdf_format: False
+
+path:
+  path_to_output: "/work/bb1153/b382267/tropical_rainfall_cicle3/"
+  path_to_netcdf: "/work/bb1153/b382267/tropical_rainfall_cicle3/NetCDF/histograms/"
+  path_to_pdf: "/work/bb1153/b382267/tropical_rainfall_cicle3/NetCDF/PDF/"
+  name_of_netcdf: "ICON_ngc3028_lra"
+  name_of_pdf: "ICON_ngc3028_lra"
+
+
