The unit's convertation bag is fixed

--- a/diagnostics/tropical_rainfall/cli/config/trop_rainfall_config.yml
+++ b/diagnostics/tropical_rainfall/cli/config/trop_rainfall_config.yml
@@ -10,7 +10,7 @@ class_attributes:
   width_of_bin: 1
 
 model_variable: 'tprate'
-new_unit:       'mm/hr'
+new_unit:       'mm/day'
 loglevel:       'WARNING'
 
 plot:
