--- a/diagnostics/ecmean/cli/config_ecmean_cli.yaml
+++ b/diagnostics/ecmean/cli/config_ecmean_cli.yaml
@@ -9,7 +9,7 @@ compute:
   numproc: 1
 
 setup:
-  loglevel: 'INFO'
+  loglevel: 'WARNING'
   interface_file: '../config/interface_AQUA.yml'
   config_file: '../config/ecmean_config.yml'
   outputdir: '../output'
