The bool operators to call specific functions are added.

--- a/diagnostics/atmglobalmean/cli/config/atm_mean_bias_config.yml
+++ b/diagnostics/atmglobalmean/cli/config/atm_mean_bias_config.yml
@@ -11,6 +11,9 @@ diagnostic_attributes:
   var_name: "2t"
   plev: null
   statistic: "mean"
+  seasonal_bias: True
+  compare_datasets_plev: True
+  plot_map_with_stats: True
 
 time_frame:
   start_date1: '2022-01-01'
