The cli is polished with autopep8.

--- a/diagnostics/radiation/cli/config/radiation_config.yml
+++ b/diagnostics/radiation/cli/config/radiation_config.yml
@@ -24,8 +24,8 @@ time_frame:
 diagnostic_attributes:
   bar_plot: False
   bias_maps: False
-  gregory: False
-  time_series: True
+  gregory: True
+  time_series: False
 
 plot:
   model_label: "ifs_4km"
