--- a/diagnostics/radiation/cli/config/radiation_config.yml
+++ b/diagnostics/radiation/cli/config/radiation_config.yml
@@ -14,7 +14,7 @@ data:
   source_era5: "monthly"
 
 time_frame:
-  year: 2020
+  bar_plot_year: 2020
   model_start_date: '2020'
   model_end_date: '2024'
   era5_start_date: '2000-01-01' 
