--- a/diagnostics/tropical_rainfall/cli/config/trop_rainfall_config.yml
+++ b/diagnostics/tropical_rainfall/cli/config/trop_rainfall_config.yml
@@ -24,8 +24,8 @@ plot:
 
 path:
   path_to_output: "/work/bb1153/b382267/tropical_rainfall_cicle3/"
-  path_to_netcdf: "/work/bb1153/b382267/tropical_rainfall_cicle3/NetCDF/histograms/"
-  path_to_pdf: "/work/bb1153/b382267/tropical_rainfall_cicle3/NetCDF/PDF/"
+  #path_to_netcdf: "/work/bb1153/b382267/tropical_rainfall_cicle3/NetCDF/histograms/"
+  #path_to_pdf: "/work/bb1153/b382267/tropical_rainfall_cicle3/NetCDF/PDF/"
   name_of_netcdf: "ICON_ngc3028_lra"
   name_of_pdf: "ICON_ngc3028_lra"
 
