--- a/config/machines/lumi/regrid.yaml
+++ b/config/machines/lumi/regrid.yaml
@@ -32,6 +32,13 @@ sources:
       monthly-1deg-2d: lon-lat
       monthly-1deg-3d: lon-lat
       lra-r100-monthly: lon-lat
+    dev-control-1990-nemo:
+      default: tco1279
+      hourly-1deg: lon-lat
+      6hourly-1deg: lon-lat
+      monthly-1deg-2d: lon-lat
+      monthly-1deg-3d: lon-lat
+      lra-r100-monthly: lon-lat
       opa: lon-lat
     historical-1990-devcon:
       default: tco1279
