--- a/config/machines/lumi/catalog/IFS/control-1990-nemo-dev.yaml
+++ b/config/machines/lumi/catalog/IFS/control-1990-nemo-dev.yaml
@@ -25,7 +25,7 @@ sources:
     metadata: 
       fdb_path: /pfs/lustrep3/scratch/project_465000454/iwagner/a0c7/config.yaml
       eccodes_path: /projappl/project_465000454/jvonhar/aqua/eccodes/eccodes-2.30.0/definitions
-      variables: ['tprate', '2t', '10u', '10v', '100u', '100v', 'sr', 'blh', '2d', 'skt', 'chnk']
+      variables: ['tprate', 'sp', '2t', '10u', '10v', '100u', '100v', 'sr', 'blh', '2d', 'skt', 'chnk', 'fsr']
   hourly-1deg:
     args:
       request:
