--- a/config/machines/lumi/catalog/NEMO/main.yaml
+++ b/config/machines/lumi/catalog/NEMO/main.yaml
@@ -4,3 +4,8 @@ sources:
     driver: yaml_file_cat
     args:
         path: "{{CATALOG_DIR}}/fdb-tco79-eorca1.yaml"
+  control-1990-nemo-dev:
+    description: FDB IFS/NEMO tco1279-orca025 historical 1990 run
+    driver: yaml_file_cat
+    args:
+      path: '{{CATALOG_DIR}}/control-1990-nemo-dev.yaml'
