--- a/.github/workflows/tropical-rainfall-diagnostic.yml
+++ b/.github/workflows/tropical-rainfall-diagnostic.yml
@@ -15,12 +15,12 @@ permissions:
 
 jobs:
   tropical-rainfall-diagnostic_test:
-    if: contains(github.event.pull_request.labels.*.name, 'Ready to merge')
+    #if: contains(github.event.pull_request.labels.*.name, 'Ready to merge')
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.10"]
+        python-version: ["3.11"]
     defaults:
       run:
         shell: bash -l {0}
