--- a/config/fixes/CERES.yaml
+++ b/config/fixes/CERES.yaml
@@ -10,9 +10,36 @@ models:
                       mtntrf: 
                           derived: 0.-toa_lw_all_mon
                           grib: true
+                          attributes:
+                              valid_min: -500
+                              valid_max: 0
+                              positive: down  
                       mtnsrf: 
                           derived: solar_mon-toa_sw_all_mon
                           grib: true
+                          attributes:
+                              valid_min: 0
+                              valid_max: 1400
+                              positive: down
+          
+          ebaf-toa42:
+              default:
+                  data_model: False
+                  vars:
+                      mtntrf: 
+                          derived: 0.-toa_lw_all_mon
+                          grib: true
+                          attributes:
+                              valid_min: -500
+                              valid_max: 0
+                              positive: down  
+                      mtnsrf: 
+                          derived: solar_mon-toa_sw_all_mon
+                          grib: true
+                          attributes:
+                              valid_min: 0
+                              valid_max: 1400
+                              positive: down                    
           syn-toa41:
               default:
                   vars:
