--- a/config/fixes/CERES.yaml
+++ b/config/fixes/CERES.yaml
@@ -39,7 +39,27 @@ models:
                           attributes:
                               valid_min: 0
                               valid_max: 1400
-                              positive: down                    
+                              positive: down
+          ebaf-sfc41:
+              default:
+                  data_model: False
+                  vars:
+                      mtntrf: 
+                          derived: 0.-sfc_net_lw_all_mon
+                          grib: true
+                      mtnsrf: 
+                          derived: sfc_net_sw_all_mon
+                          grib: true
+          ebaf-sfc42:
+              default:
+                  data_model: False
+                  vars:
+                      mtntrf: 
+                          derived: 0.-sfc_net_lw_all_mon
+                          grib: true
+                      mtnsrf: 
+                          derived: sfc_net_sw_all_mon
+                          grib: true              
           syn-toa41:
               default:
                   vars:
