--- a/environment-common.yml
+++ b/environment-common.yml
@@ -20,6 +20,7 @@ dependencies:
   - intake-esm
   - pip:
     - -e ./diagnostics/teleconnections/ # pip install -e of teleconnections
+    - -e ./diagnostics/tropical_cyclones/ # pip install -e of tropical cyclones
     # pip install -e of AQUA itself
     - -e .[all]
     
