reference block in config file

--- a/diagnostics/teleconnections/cli/cli_config_atm.yaml
+++ b/diagnostics/teleconnections/cli/cli_config_atm.yaml
@@ -15,6 +15,11 @@ models:
   - model: 'IFS'
     exp: 'tco2559-ng5-cycle3'
     source: 'lra-r100-monthly'
+
+# Reference are analyzed if --ref is passed to the script
+# This can be a list of models if needed.
+# The same extra keyword arguments as for the models can be used.
+references:
   - model: 'ERA5'
     exp: 'era5'
     source: 'monthly'
