option to set on/off full year correlation and regression analysis

--- a/diagnostics/teleconnections/cli/cli_config_atm.yaml
+++ b/diagnostics/teleconnections/cli/cli_config_atm.yaml
@@ -44,4 +44,5 @@ configdir: null
 # List of teleconnections specific configuration parameters
 NAO:
   months_window: 3
-  seasons: ['DJF'] # to analyse additionally to the full data
+  full_year: false
+  seasons: ['DJF', 'JJA'] # to analyse additionally to the full data
