update what is available on node 20 instead of 16

--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -29,7 +29,7 @@ jobs:
   aqua_test:
     # NOTE: this option can be uncommented to run the job only when
     #       a pull request contains a label with the name "Ready to merge".
-    # if: contains(github.event.pull_request.labels.*.name, 'Ready to merge')
+    if: contains(github.event.pull_request.labels.*.name, 'Ready to merge')
     env:
       # You can disable coverage by changing this to false. You can
       # also add other Python versions to the matrix, pinning the
