--- a/.github/workflows/tropical-rainfall-diagnostic.yml
+++ b/.github/workflows/tropical-rainfall-diagnostic.yml
@@ -15,7 +15,7 @@ permissions:
 
 jobs:
   tropical-rainfall-diagnostic_test:
-    #if: contains(github.event.pull_request.labels.*.name, 'Ready to merge')
+    if: contains(github.event.pull_request.labels.*.name, 'Ready to merge')
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
