Little refinement of radiation CLI for the wrapper

--- a/diagnostics/radiation/cli/config/radiation_config.yml
+++ b/diagnostics/radiation/cli/config/radiation_config.yml
@@ -15,7 +15,7 @@ diagnostic_attributes:
   gregory: True
   time_series: True
 
-loglevel: 'debug'
+loglevel: 'warning'
 
 path:
   path_to_output: "/work/bb1153/b382267/AQUA/diagnostics/radiation/cli/config/"
