--- a/.github/workflows/aqua-pip.yml
+++ b/.github/workflows/aqua-pip.yml
@@ -2,8 +2,8 @@ name: AQUA tests with pip
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "0 3 * * 1" #run every Monday night at 3AM UTC
+  # schedule:
+  #   - cron: "0 3 * * 1" #run every Monday night at 3AM UTC
 
 jobs:
   aqua_test:
