--- a/config/machines/levante/catalog/PSC/piomas.yaml
+++ b/config/machines/levante/catalog/PSC/piomas.yaml
@@ -4,7 +4,7 @@ plugins:
 
 sources:
   sivol:
-    description: Polar Science Center sea ice volume (sivol) for the Southern Hemisphere 
+    description: Polar Science Center sea ice volume (sivol) for the Northern Hemisphere 
     driver: netcdf
     args:
       chunks:
@@ -13,4 +13,4 @@ sources:
       xarray_kwargs:
         decode_times: False
       urlpath:
-      - /work/bb1153/b382075/datasets/PSC/GIOMAS/raw/sivol_r1i1p1_mon_197901-202212_GCCS360x276.nc
+      - /work/bb1153/b382075/datasets/PSC/PIOMAS/raw/sivol_r1i1p1_mon_197901-202212_GCCS360x120.nc
