--- a/config/machines/levante/catalog/IFS/tco3999-ng5.yaml
+++ b/config/machines/levante/catalog/IFS/tco3999-ng5.yaml
@@ -1,35 +1,38 @@
 plugins:
   source:
-    - module: intake_xarray
-    - module: gribscan
+  - module: intake_xarray
+  - module: gribscan
 
 sources:
   ICMGG_atm2d:
     driver: zarr
     description: original 2d output
     args:
-      consolidated: False
+      consolidated: false
       #urlpath: reference::/work/bm1235/a270046/cycle2-sync/tco3999-ng5/ICMGGc2/json.dir/atm2d.json
-      urlpath: reference::/work/bm1344/AWI/nextGEMS_Cycle2_IFS_concat/tco3999-ng5/varfiles_all/json.dir/atm2d.json
+      urlpath: 
+        reference::/work/bm1344/AWI/nextGEMS_Cycle2_IFS_concat/tco3999-ng5/varfiles_all/json.dir/atm2d.json
   ICMU_atm2d:
     driver: zarr
     description: original 2d output (lnsp)
     args:
-      consolidated: False
+      consolidated: false
       #urlpath: reference::/work/bm1235/a270046/cycle2-sync/tco3999-ng5/ICMUAc2/json.dir/atm2d.json
-      urlpath: reference::/work/bm1344/AWI/nextGEMS_Cycle2_IFS_concat/tco3999-ng5/varfiles_all/json.dir/atm2d.json
+      urlpath: 
+        reference::/work/bm1344/AWI/nextGEMS_Cycle2_IFS_concat/tco3999-ng5/varfiles_all/json.dir/atm2d.json
   ICMU_atm3d:
     driver: zarr
     description: original 3d output
     args:
-      consolidated: False
+      consolidated: false
       #urlpath: reference::/work/bm1235/a270046/cycle2-sync/tco3999-ng5/ICMUAc2/json.dir/atm3d.json
-      urlpath: reference::/work/bm1344/AWI/nextGEMS_Cycle2_IFS_concat/tco3999-ng5/varfiles_all/json.dir/atm3d.json
+      urlpath: 
+        reference::/work/bm1344/AWI/nextGEMS_Cycle2_IFS_concat/tco3999-ng5/varfiles_all/json.dir/atm3d.json
   interpolated_global:
     driver: zarr
     description: NN interpolation to 5400x2700 grid (lon=[-180,180], lat=[-90, 90])
     args:
-      consolidated: False
+      consolidated: false
       compat: override
       combine: nested
       #urlpath: 
@@ -38,7 +41,7 @@ sources:
       #- reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/lcc/netcdf/tco3999-ng5_pc.json
       #- reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/10u/netcdf/tco3999-ng5_pc.json
       #- reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/10v/netcdf/tco3999-ng5_pc.json
-      urlpath: 
+      urlpath:
       - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/2t/netcdf/tco3999-ng5_pc.json
       - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/2d/netcdf/tco3999-ng5_pc.json
       - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/lcc/netcdf/tco3999-ng5_pc.json
@@ -48,40 +51,8 @@ sources:
     driver: netcdf
     description: LRA data monthly at r100
     args:
-      urlpath: /work/bb1153/b382076/LRAv3/IFS/tco3999-ng5/r100/monthly/*tco3999-ng5_r100_monthly_*.nc
+      urlpath: 
+        /work/bb1153/b382076/LRA-cycle2/IFS/tco3999-ng5/r100/monthly/*tco3999-ng5_r100_monthly_????.nc
       chunks: {}
       xarray_kwargs:
         decode_times: true
-  # interpolated_np:
-  #   driver: zarr
-  #   args:
-  #     consolidated: False
-  #     compat: override
-  #     combine: nested
-  #     urlpath: 
-  #     - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/2t/netcdf/tco3999-ng5_np.json
-  #     - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/2d/netcdf/tco3999-ng5_np.json
-  #     - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/ci/netcdf/tco3999-ng5_np.json
-  #     - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/lcc/netcdf/tco3999-ng5_np.json
-  #     - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/10u/netcdf/tco3999-ng5_np.json
-  #     - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/10v/netcdf/tco3999-ng5_np.json
-  # interpolated_sp:
-  #   driver: zarr
-  #   args:
-  #     consolidated: False
-  #     compat: override
-  #     combine: nested
-  #     urlpath: 
-  #     - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/2t/netcdf/tco3999-ng5_sp.json
-  #     - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/2d/netcdf/tco3999-ng5_sp.json
-  #     - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/lcc/netcdf/tco3999-ng5_sp.json
-  #     - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/10u/netcdf/tco3999-ng5_sp.json
-  #     - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/10v/netcdf/tco3999-ng5_sp.json
-  # interpolated_sp_ci:
-  #   driver: zarr
-  #   args:
-  #     consolidated: False
-  #     compat: override
-  #     combine: nested
-  #     urlpath: 
-  #     - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/ci/netcdf/tco3999-ng5_sp.json
