--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -112,6 +112,15 @@ jobs:
           # When it fails, the test.grib file will have 0 (zero) messages.
           fdb-read sample_test_data_fdb_request test.grib
           grib_dump test.grib
+      - name: Install Flake8
+        run: |
+          python -m pip install flake8
+      - name: Lint with flake8
+        run: |
+          # stop the build if there are Python syntax errors or undefined names
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics --exclude=__init__.py
       - name: Run tests
         # NOTE: We could gain a few seconds in the build, if needed,
         #       by running with coverage in only one matrix job run.
